branches/v1.1-dev/docs/5.1._Transport_-_MQTT.md
# MQTT Transport

_(c) AMWA 2018, CC Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)_

This document describes the use of the MQTT transport.

Other sections can be accessed from the [Overview](1.0._Overview.md).

## 1. Introduction

* Simple and lightweight
* Broker based
* Can be used on top of TCP or WebSockets
* Can use encryption
* Supports various QOS settings for message delivery
* Inherently solves the problem of late joiners using retained messages
* Events filtering is handled by the broker with topic filtering mechanics

## 2. NMOS Resources transport

NMOS resources using MQTT will use the `urn:x-nmos:transport:mqtt` transport.

## 3. Connection management

Only IS-05 connection management will be used for connection management of resources defined in this specification.

### 3.1 broker_topic

The `broker_topic` parameter will hold the MQTT topic and will always be set to the source id, prefixed with `x-nmos/source/` for easier filtering.

Message types (see [Message types](2.0._Message_types.md)) which will use this parameter as the publishing topic:

* State
* Reboot
* Shutdown

### 3.2 connection_status_broker_topic

The `connection_status_broker_topic` parameter will hold the MQTT connection status topic and will always be set using the following format `x-nmos/connection/guid`.  
The `guid` can be one of the following:

* sender id (if the MQTT connection on the sending side is unique to each sender)
* device id (if the MQTT connection on the sending side is shared across a device)
* node id (if the MQTT connection on the sending side is shared across the whole node)
* any other unique id as long as it creates a unique topic

Message types (see [Message types](2.0._Message_types.md)) which will use this parameter as the publishing topic:

* Connection lost

### 3.3 ext_is_07_rest_api_url

The `ext_is_07_rest_api_url` parameter will represent the url to the API path which offers the current state and type of an event emitter (source) (see [Event & Tally REST API](6.0._Event_and_tally_rest_api.md))

_Example of IS-05 PATCH request_

```json
{
    "sender_id": "9f463872-9621-4939-aa3a-dc3c82d8578b",
    "master_enable": true,
    "activation": {
        "mode": "activate_immediate",
        "requested_time": null
    },
    "transport_params": [
        {
            "broker_topic": "x-nmos/source/9f463872-9621-4939-aa3a-dc3c82d8578b",
            "connection_status_broker_topic": "x-nmos/connection/a9c3cc7a-36f1-429c-b480-87b9d7e26b83",
            "ext_is_07_rest_api_url": "http://hostname/x-nmos/events/v1.0/sources/9f463872-9621-4939-aa3a-dc3c82d8578b/"
        }
    ]
}
```

### Disconnecting/Parking

A disconnection IS-05 `patch` request should always trigger the receiver to unsubscribe from the associated `broker_topic` and `connection_status_broker_topic`.
If multiple receivers share a connection to the broker then it is up to the implementer to only unsubscribe from the `connection_status_broker_topic` when it is no longer needed by any managed receivers.

## 4. QOS Settings

MQTT publishers are recommended to use the `exactly once QOS (2)`

## 5. Late joiners

MQTT publishers are required to send the `retained message` flag with every message (with the exception of connection lost - WILL messages) in order to solve the problem of late joiners.

Consumers (receivers) have a choice to either use the retained message or query the late joiners api using `ext_is_07_rest_api_url` to access the latest state of an emitter in order to get in sync.

## 6. MQTT _WILL_ message

All event emitters (MQTT publishers) should send an `MQTT WILL` message upon first connection to the MQTT broker.
This should be the `connection_lost` message described in `1.4 The connection lost message` under [Message types](2.0._Message_types.md).

This message will always use the `connection_status_broker_topic` parameter as the publishing topic.

## 7. Broker discovery

The MQTT broker will be advertised via the DNS-SD service type `_nmos-mqtt._tcp`.
